@@ -1,3 +1,9 @@
+2001-07-28  Bruno Haible  <haible@clisp.cons.org>
+
+	* printf-parse.h: Don't include <ctype.h>.
+	(ISDIGIT): New macro.
+	(read_int, parse_one_spec): Use ISDIGIT instead of isdigit.
+
 2001-08-05  Bruno Haible  <haible@clisp.cons.org>
 
 	* stdbool.h.in (_Bool): Define differently in C++ mode.
